# apa7-compliance-engine-backend

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: README.md  config.py  exceptions.py  main.py  rules_library.py  rules_models.py  security.py
api/agents/: base_agent.py  critical_review_agent.py  document_profile_agent.py  general_structure_agent.py  global_format_agent.py  in_text_citations_agent.py  institutional_policy_agent.py  math_equations_agent.py  metadata_consistency_agent.py  references_agent.py  scientific_design_agent.py  tables_figures_agent.py
api/llm/: README.md  __init__.py  client.py  providers.py  rule_runner.py
api/llm/prompts/coach/: plan_section_es.md
api/llm/prompts/profile/: detect_profile_es.md
api/models/: coach.py  export_models.py  extract_text_models.py  layout_models.py  lint_models.py  profile_models.py
api/orchestrator/: lint_orchestrator.py
api/routes/: __init__.py  coach_router.py  export_router.py  extract_text_router.py
api/rules/apa7_cun/: general-structure.rules.json  global-format.rules.json  intextcitations.rules.json  math-equations.rules.json  metadata-consistency.rules.json  references.rules.json  resumen-quality.rules.json  scientific-design.rules.json  tables-figures.rules.json
api/services/: README.md  coach_service.py  export_service.py  text_extraction_service.py
docs/: DEPLOY.md  DEPLOYMENT.md  EXPORT_DOCX_API.md  RULES_REGISTRY.md  api-integration.md  git-workflow.md  llm-overview.md
tests/: __init__.py  test_coach_service.py  test_llm_rules_infrastructure.py
